# zelos-extension-mqtt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
scripts/: bump_version.py
tests/: test_mqtt.py
zelos_extension_mqtt/: __init__.py  client.py  mqtt_map.py
zelos_extension_mqtt/cli/: __init__.py  app.py
zelos_extension_mqtt/demo/: __init__.py  demo_device.json  simulator.py
