[project]
name = "zelos-extension-mqtt"
version = "0.1.0"
description = "MQTT broker monitoring and IoT data collection for Zelos"
requires-python = ">=3.11"
dependencies = [
    "zelos-sdk>=0.0.8",
    "aiomqtt>=2.3.0",
    "amqtt>=0.11.0b1",
    "rich-click>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PTH"]
